--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,16 @@ body {
   opacity: 0;
   transition: opacity 0.5s ease-out;
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d1d5db;
+  border-radius: 1rem;
+}
